--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "email-validator": "^2.0.4",
     "moment": "^2.29.1",
     "multi-color-progressbar-with-indicator": "^1.0.0",
     "node-sass": "^4.14.1",
@@ -20,7 +21,8 @@
     "react-scripts": "^3.4.3",
     "react-tooltip": "^4.2.13",
     "reactstrap": "^8.8.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
